Add spell classes

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
             src="https://cdn.glitch.global/77e24274-3dbb-4c52-985d-a322b82f20ec/harry2.png?v=1651804582736"
           />
           <aside class="harrySpells">
-            <i class="fa-solid fa-feather"></i>
-            <i class="fa-brands fa-battle-net"></i>
-            <i class="fa-solid fa-bolt-lightning"></i>
+            <i class="fa-solid fa-feather harrySpell"></i>
+            <i class="fa-brands fa-battle-net harrySpell"></i>
+            <i class="fa-solid fa-bolt-lightning harrySpell"></i>
           </aside>
         </div>
         <div>
@@ -40,17 +40,18 @@
             src="https://cdn.glitch.global/77e24274-3dbb-4c52-985d-a322b82f20ec/bella.png?v=1651804290442"
           />
           <aside class="bellaSpells">
-            <i class="fa-solid fa-tornado"></i>
-            <i class="fa-solid fa-hurricane"></i>
-             <i class="fa-solid fa-skull"></i>
+            <i class="fa-solid fa-tornado bellaSpell"></i>
+            <i class="fa-solid fa-hurricane bellaSpell"></i>
+            <i class="fa-solid fa-skull bellaSpell"></i>
           </aside>
         </div>
       </div>
       <div class="wandDiv">
-        <img
+        <i class="fa-solid fa-wand-sparkles" id="wand"></i>
+        <!-- <img
           id="wand"
           src="https://cdn.glitch.global/77e24274-3dbb-4c52-985d-a322b82f20ec/wand.webp?v=1651804753835"
-        />
+        /> -->
       </div>
       <section class="xpStuff">
         <div id="harryXP">
